# Mini-RTE

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: default_config.yaml
data/: demand_profile_2022.csv  demand_profile_2023.csv  demand_profile_24h.csv  solar_availability.csv  wind_availability.csv
scripts/: train_forecast.py
src/mini_rte/: __init__.py  config.py  data_loader.py  forecast.py  scenarios.py  solver.py  visualization.py
src/mini_rte/models/: __init__.py  plant.py  unit_commitment.py
tests/: __init__.py  test_data_loader.py  test_model.py
